Added output of video from youtube and its moderation